Mobile: trying to stop animation on mobile view

--- a/src/Style/projects.scss
+++ b/src/Style/projects.scss
@@ -25,6 +25,10 @@
     border: 1px solid black;
     box-shadow: 10px 10px 20px rgba(2, 2, 2, 0.514),
       10px 2px 2px rgba(0, 0, 0, 0.589);
+    @media (max-width: 500px) {
+      border: none;
+      box-shadow: none;
+    }
   }
   transform: rotate(-2deg);
   @media (max-width: 768px) {
@@ -84,6 +88,9 @@
   z-index: 0;
   border-radius: 10px;
   overflow: hidden;
+  @media (max-width: 500px) {
+    position: none;
+  }
 
   &::before {
     content: '';
@@ -102,6 +109,14 @@
       linear-gradient(rgba(34, 34, 34, 0.855), rgba(34, 34, 34, 0.855));
 
     animation: rotate 5s linear infinite;
+    @media (max-width: 500px) {
+      animation: none;
+      background-color: none;
+      background-repeat: no-repeat;
+      background-size: none;
+      background-position: none;
+      background-image: none;
+    }
   }
 
   &::after {
@@ -143,13 +158,14 @@
     border: 1px solid black;
     box-shadow: 10px 10px 20px rgba(2, 2, 2, 0.514),
       10px 2px 2px rgba(0, 0, 0, 0.589);
+    @media (max-width: 500px) {
+      border: none;
+      box-shadow: none;
+    }
   }
   transform: rotate(2deg);
   @media (max-width: 768px) {
     transform: rotate(0deg);
-    background-color: none;
-    box-shadow: none;
-    border: none;
   }
   @media (max-width: 500px) {
     background-color: none;
